Final DevOps Project/final-devops-project/kubernetes/00-namespace.yaml
# Name: Hemang | Enrollment number: 24bcs10209
apiVersion: v1
kind: Namespace
metadata:
  name: taskboard
  labels: { app.kubernetes.io/name: taskboard }
